--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
+    "@types/node": "^20.12.8",
+    "eslint": "^9.1.1",
+    "tsx": "^4.8.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "fastify": "^4.26.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
   }
